# stdevtolita

./: .gitignore  .gitmodules  README.md
Help/: CreateNewPackage.md  ParameterDocGuide.md
help/: PadronizacaoGitHub.md  PassoAPasso.md
src/stdstates/: CMakeLists.txt  README.md  package.xml
src/stdstates/include/stdstates/aux/: PidController.hpp
tasks/: agent.sh  build.sh  image_bridge.sh  mavlink_router.sh  setup.sh  simulate.sh  submodules.sh
