<package format="2">
  <name>stdstates</name>
  <version>0.1.0</version>
  <description>A ROS2 library for standard states used in eVTOL ITA's projects</description>
  <maintainer email="angelo.marconi.pavan@gmail.com">Ângelo Marconi Pavan</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>